Add resume page and page selector

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: M. Maggiolo's website
+title: Matteo Maggiolo's website
 subtitle: AI Engineer
 email: maggiolo.matteo@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
