General updates to the site

--- a/_config.yml
+++ b/_config.yml
@@ -37,33 +37,24 @@ include:
 
 author:
   name   : "Matteo Maggiolo"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/img/bio.jpeg"
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "Linkedin"
+      icon: "fab fa-fw fa-brands fa-linkedin"
+      url: "https://linkedin.com/in/matteo-maggiolo-b69366183/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://github.com/Idonotknowmyname"
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "Linkedin"
+      icon: "fab fa-fw fa-brands fa-linkedin"
+      url: "https://linkedin.com/in/matteo-maggiolo-b69366183/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://github.com/Idonotknowmyname"
 
 defaults:
   # _posts
